Add some classes header
But function still are undefined for the moment

--- a/doc Doxygen/latex/annotated.tex
+++ b/doc Doxygen/latex/annotated.tex
@@ -1,7 +1,9 @@
 \section{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\-:\begin{DoxyCompactList}
 \item\contentsline{section}{\hyperlink{class_chord}{Chord} }{\pageref{class_chord}}{}
-\item\contentsline{section}{\hyperlink{classno_skin}{no\-Skin} }{\pageref{classno_skin}}{}
+\item\contentsline{section}{\hyperlink{classno_skin}{no\-Skin} \\*This class is used to represent all windows, no matter its layout }{\pageref{classno_skin}}{}
+\item\contentsline{section}{\hyperlink{class_not_connected}{Not\-Connected} }{\pageref{class_not_connected}}{}
 \item\contentsline{section}{\hyperlink{class_note}{Note} }{\pageref{class_note}}{}
+\item\contentsline{section}{\hyperlink{class_not_j_s_o_n_exception}{Not\-J\-S\-O\-N\-Exception} }{\pageref{class_not_j_s_o_n_exception}}{}
 \item\contentsline{section}{\hyperlink{class_partition}{Partition} }{\pageref{class_partition}}{}
 \end{DoxyCompactList}
