--- a/doc Doxygen/latex/dir_80db97bf37ccda71cf07f23cd158d24e.tex
+++ b/doc Doxygen/latex/dir_80db97bf37ccda71cf07f23cd158d24e.tex
@@ -7,4 +7,12 @@
 file {\bfseries noskin.\-cpp}
 \item 
 file {\bfseries noskin.\-h}
+\item 
+file {\bfseries notconnected.\-cpp}
+\item 
+file {\bfseries notconnected.\-h}
+\item 
+file {\bfseries notjsonexception.\-cpp}
+\item 
+file {\bfseries notjsonexception.\-h}
 \end{DoxyCompactItemize}
