--- a/doc Doxygen/latex/dir_8f93515b2650f1111afff3862ccc2c77.tex
+++ b/doc Doxygen/latex/dir_8f93515b2650f1111afff3862ccc2c77.tex
@@ -4,6 +4,8 @@
 \subsection*{Directories}
 \begin{DoxyCompactItemize}
 \item 
+directory \hyperlink{dir_cc6a2072547674404cc6dce004bb26ed}{doc Doxygen}
+\item 
 directory \hyperlink{dir_80db97bf37ccda71cf07f23cd158d24e}{graphic}
 \item 
 directory \hyperlink{dir_92d1a4ac7186d0c7fa393b3f16106511}{model}
